Adicionando métodos de contagem em algumas classes e algumas mudanças na base de dados

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,4 +26,7 @@
       <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>
       <url-pattern>/</url-pattern>
 </servlet-mapping>
+<error-page>
+    <location>/errors</location>
+</error-page>
 </web-app>
